--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
 }
 .About {
   text-align: center;
@@ -21,12 +22,24 @@
   height: 40vmin;
   pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#comm {
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-color: red;
+  min-height: 5vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  position: sticky;
+  top: 0;
 }
+#label {
+  color: white;
+}
+
 .tinted_Video {
   background-color: rgba(10, 4, 4, 0.906);
   background-blend-mode: multiply;
@@ -45,12 +58,21 @@
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
+  width: 100%;
+  border: 2px solid blue;
 }
+
 .App-Links {
   padding-left: 30px;
   padding-right: 30px;
 }
-
+.CommSection {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  min-width: 100vw;
+  text-align: center;
+  padding: 3px;
+}
 .App-link {
   color: #61dafb;
 }
@@ -83,5 +105,12 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 600px) {
+  .App-header {
+    width: 100%;
+    border: 2px solid blue;
   }
 }
